--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-gradient-progress": "^1.0.3",
     "react-icons": "^4.2.0",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
