--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "boostrap": "^2.0.0",
+    "md5": "^2.3.0",
     "moment": "^2.29.1",
+    "password-hash": "^1.2.2",
     "quagga": "^0.12.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
@@ -21,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-webcam-barcode-scanner": "0.0.2-rc2",
+    "salted-md5": "^4.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
