Changes an Producers, Promotion + inventory raname

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.0",
     "react-webcam-barcode-scanner": "0.0.2-rc2",
     "salted-md5": "^4.0.2",
     "web-vitals": "^1.0.1"
