--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bcrypt": "^5.0.1",
     "boostrap": "^2.0.0",
+    "chart.js": "^3.3.0",
     "json-stringify-safe": "^5.0.1",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
@@ -18,6 +19,7 @@
     "quagga": "^0.12.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-gradient-progress": "^1.0.3",
     "react-icons": "^4.2.0",
